--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/javascript/jsc/WebKit"]
 path = src/bun.js/WebKit
-url = https://github.com/oven-sh/WebKit.git
+url = https://github.com/ziord/WebKit.git
 ignore = dirty
 depth = 1
 update = none
